k8s/master.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: slack-integration

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: slack-integration-master
    version: master
  name: slack-integration-master
  namespace: slack-integration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack-integration-master
      version: master
  template:
    metadata:
      labels:
        app: slack-integration-master
        version: master
      name: slack-integration-master
    spec:
      containers:
      - image: ptcos/slack-json:0.2.2
        name: slack-integration-master
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: slack-integration-master
    version: master
  name: slack-integration-master
  namespace: slack-integration
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: slack-integration-master
    version: master

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: slack-integration-master-ingress
  namespace: slack-integration
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    traefik-type: public
spec:
  rules:
    - host: slack-integration-master.protacon.cloud
      http:
        paths:
          - backend:
              serviceName: slack-integration-master
              servicePort: 80
  tls:
    - hosts:
      - slack-integration-master.protacon.cloud
